syntax = "proto3";
package rollapp.hub_genesis;

import "gogoproto/gogo.proto";
import "hub-genesis/params.proto";
import "hub-genesis/genesis_info.proto";

option go_package = "github.com/dymensionxyz/dymension-rdk/x/hub-genesis/types";

// GenesisState defines the hub-genesis module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];

  // accounts on the Hub to fund with some bootstrapping transfers
  repeated GenesisAccount genesis_accounts = 2 [ (gogoproto.nullable) = false ];
}
